2009-02-15 Pierre Wieser <pwieser@trychlos.org>

	Rename src/core/na-utils.h to src/api/na-core-utils.h
	Rename src/core/na-utils.c to src/core/na-core-utils.c

	* src/api/Makefile.am:
	* src/core/Makefile.am: Updated accordingly.

	* src/core/na-core-utils.c:
	* src/core/na-core-utils.h: Normalize functions names.

	Merge src/private/ and src/runtime to src/core/
	Rename src/api/na-api.h to src/api/na-extension.h

	* src/api/README:
	* src/io-desktop/nadp-module.c:
	* src/io-gconf/nagp-module.c:
	* src/runtime/na-module.c: Updated accordingly.

	Define XML provider as a dynamic module.
	
	* io-xml/Makefile.am:
	* io-xml/naxml-module.c:
	* io-xml/naxml-provider.c:
	* io-xml/naxml-provider.h: New files.

	Rename source tree from nautilus-actions/ to src/
	Rename src/io-provider-desktop/ to src/io-desktop/
	Rename src/io-provider-gconf/ to src/io-gconf/
	Rename src/plugin to src/plugin-menu/
	Rename src/tracker to src/plugin-tracker/

	* Makefile.am:
	* configure.ac:
	* po/POTFILES.in: Updated accordingly.

2009-01-31 Pierre Wieser <pwieser@trychlos.org>

	* nautilus-actions/io-provider-desktop/nadp-desktop-file.c:
	* nautilus-actions/io-provider-desktop/nadp-desktop-file.h:
	* nautilus-actions/io-provider-desktop/nadp-read.c:
	* nautilus-actions/io-provider-desktop/nadp-utils.c:
	* nautilus-actions/io-provider-desktop/nadp-utils.h:
	* nautilus-actions/io-provider-gconf/nagp-read.c:
	Implements reading of .desktop files.

	* nautilus-actions/io-provider-gconf/nagp-write.c (write_item_action):
	Always writes the 'OBJECT_ITEM_TOOLBAR_LABEL_ENTRY' key.

2009-01-30 Pierre Wieser <pwieser@trychlos.org>

	No more record the toolbar_same_label indicator.

	* nautilus-actions.schemas.in:
	Remove schema for 'toolbar-same-label' key.

	* nautilus-actions/io-provider-gconf/nagp-read.c
	(read_item_action_properties):
	No more read the 'toolbar-same-label' entry.

	* nautilus-actions/io-provider-gconf/nagp-write.c (write_item_action):