@@ -38,6 +38,7 @@ AM_CPPFLAGS += \
 
 libna_core_la_SOURCES = \
 	na-core-utils.c										\
+	na-gconf-monitor.c									\
 	\
 	na-gconf-utils.c									\
 	na-gconf-utils.h									\
