@@ -1,5 +1,6 @@
 2009-02-15 Pierre Wieser <pwieser@trychlos.org>
 
+	Rename src/api/na-gconf-monitor.c to src/core/na-gconf-monitor.c
 	Rename src/core/na-utils.h to src/api/na-core-utils.h
 	Rename src/core/na-utils.c to src/core/na-core-utils.c
 
